--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li>linux/x64/shell_reverse_tcp</li>
                 <li>android/meterpreter/reverse_https</li>
                 <li><a href="reverse-shell.php">Install best php reverse shell</a></li>
+                <li><a href="main_exploit.py">Install reverse shell for target computer</a></li>
             </ul>
         </div>
         
